--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <script src="https://kit.fontawesome.com/7e05c6993a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
@@ -10,18 +11,18 @@
 <body>
     <h1>10 Richest People </h1>
     <p> Drag and drop the items into their corresponding spots</p>
-    <ul class = "draggable-list" id="draggable-list">
-        
-    </ul>
-<button class="check-btn" id="check">
-            Check Order
-            <i class="fa-solid fa-paper-plane"></i>
-        </button>
-        <button id=”sort-btn” type=”button” class=”btn btn-secondary” onclick="sortOrder()">Sort Reviews</button>
-        <ul id="demo"></p>
+    <ul class="draggable-list" id="draggable-list">
 
-    <script src="script.js"> </script>
+    </ul>
+    <button class="check-btn" id="check">
+        Check Order
+        <i class="fa-solid fa-paper-plane"></i>
+    </button>
+    <button id="sort-btn" type="button" class="btn btn-secondary">Sort Reviews</button>
+    <ul id="demo">
+        </p>
+
+        <script src="script.js"> </script>
 </body>
 
 </html>
-
