fix conflict merge

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 
 <body>
+
     <div class="container">
         <h1>10 Richest People </h1>
         <p> Drag and drop the items into their corresponding spots</p>
-        <ul class="draggable-list" id="draggable-list">
+        <ul class="draggable-list" id="draggable-list"></ul>
+
 
         </ul>
         <div class="btns">
@@ -23,13 +25,13 @@
 
             <div class="order-drop-list">
                 <div class="dropdown">
-                    <button class="dropbtn">Sort By
+                    <div class="dropbtn">Sort By
                         <i class="fa fa-caret-down"></i>
-                    </button>
+                    </div>
                     <div class="dropdown-content">
-                        <button id="sort-btn" type="button" class="btn btn-secondary btn-asc">Ascending Order</button>
+                        <button id="sort-btn" type="button" class="btn btn-secondary btn-asc">Ascending </button>
                         <button id="sort-btn" type="button" class="btn btn-secondary btn-desc">Descending
-                            Order</button>
+                        </button>
                     </div>
                 </div>
             </div>
